--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,211 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  font-family: 'STIX Two Text', serif;
+  overflow: hidden;
+}
+
+.main {
+  width: 100%;
+  min-height: 100vh;
+  overflow: hidden;
+  background-color: white;
+}
+
+.container {
+  position: relative;
+  height: 100vh;
+  padding: 50px 40px;
+  background-color: #01A04A;
+  display: flex;
+  flex-direction: column;
+  max-height: 800px;
+  max-width: 1200px;
+  margin: auto;
+  border-radius: 6px;
+}
+
+img.logo {
+  width: 60px;
+  height: 60px;
+  border-radius: 30px;
+  position: absolute;
+}
+
+label span {
+  font-size: 2rem;
+}
+
+.desc {
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: white;
+  margin-top: 16px;
+}
+
+#start {
+  margin-right: 12px
+}
+
+@keyframes Logo1 {
+  0% {
+    top: 10px;
+  }
+  50% {
+    top: 30px;
+  }
+  100% {
+    top: 10px;
+  }
+}
+
+@keyframes Logo2 {
+  0% {
+    top: 30px;
+  }
+  50% {
+    top: 10px;
+  }
+  100% {
+    top: 30px;
+  }
+}
+
+#logo1 {
+  top: 20px;
+  left: 20px;
+  animation: Logo1 2s infinite;
+}
+
+#logo2 {
+  top: 20px;
+  right: 20px;
+  animation: Logo2 2s infinite;
+}
+
+.result {
+  min-height: 300px;
+  margin: 40px 0;
+  background-color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 150px;
+  border-radius: 10px;
+  font-weight: bold;
+  color: #f50057;
+}
+
+h1 {
+  text-align: center;
+}
+
+.form {
+  margin: 30px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+label {
+  font-size: 24px;
+  margin-right: 40px;
+}
+
+span {
+  display: inline-block;
+  width: 80px;
+}
+
+label input {
+  border: none;
+  border-radius: 6px;
+  font-size: 24px;
+  padding: 10px;
+  max-width: 200px;
+}
+
+input:focus,
+button:focus {
+  outline: none;
+}
+
+button {
+  font-size: 24px;
+  border: none;
+  padding: 0 20px;
+  line-height: 26px;
+  height: 50px;
+  border-radius: 6px;
+  margin-top: auto;
+  background-color: #ffffff;
+  cursor: pointer;
+}
+
+button:disabled {
+  background-color: #ececec;
+}
+
+.control img {
+  width: 22px;
+}
+
+.btns {
+  margin-left: 60px;
+}
+
+.results {
+  padding-left: 60px;
+  padding-right: 20px;
+  margin-top: 40px;
+  color: white;
+  margin-right: 8px;
+  font-size: 1.75rem;
+  font-weight: bold;
+}
+
+
+@media only screen and (max-width: 768px) {
+  .container {
+    width: 100%;
+    padding: 40px 10px;
+  }
+
+  .form {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .result {
+    margin-bottom: 20px;
+  }
+
+  label {
+    margin: 10px 0;
+  }
+
+  .btns {
+    margin-top: 10px;
+  }
+
+  h1 {
+    font-size: 26px;
+  }
+
+  #logo1 {
+    top: 20px;
+    left: 5px;
+    animation: Logo1 2s infinite;
+  }
+
+  #logo2 {
+    top: 20px;
+    right: 5px;
+    animation: Logo2 2s infinite;
+  }
 }
